# cooler-alerts

./: .gitignore  Cargo.toml  LICENSE  README.md  cooler-alerts.sqlite-shm  cooler-alerts.sqlite-wal  example.env  pre-commit
migrations/: 20231009063014_initial_migration.sql
src/: hypernative.rs  main.rs  request_handler.rs
src/blockchain_scanner/: mod.rs
src/discord/: alerts.rs  mod.rs
src/discord/commands/: create_alert.rs  delete_alerts.rs  list_alerts.rs  mod.rs
src/listener/: alerts.rs  mod.rs
src/registry/: types.rs  utils.rs
