[package]
name = "cooler-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
reqwest = "0.11.20"
dotenv = "0.15"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.31"