[package]
name = "cooler-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serenity = { version = "0.11.6", pdefault-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework"] }
reqwest = "0.11.20"
dotenv = "0.15"
serde = { version = "1.0.0", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
serde_json = "1.0"
chrono = "0.4.31"
ethers = { version="2.0", features = ["ws", "rustls", "abigen"] }