[package]
name = "cooler-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.32.0", features = ["full"] }
serenity = { version = "0.11.6", pdefault-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
ethers = { version="2.0", features = ["ws", "rustls", "abigen"] }
lettre = "0.11.1"
